--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "framer-motion": "^10.16.16",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-csv-importer": "^0.8.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
